# eh-system-backend2

./: .gitignore  Cargo.toml  Rocket.toml  eh-system-server.rs
lib/: album_info.rs  image_data.rs  lib.rs  thumbnail_gen.rs  url_conversion.rs
lib/image_data/: image_data.rs  mod.rs  subalbum.rs
lib/types/: album_info_types.rs  image_data_types.rs  mod.rs
tests/: ffmpegcommand.sh  get_album_info_test.rs  get_albums_flat_test.rs  image_data_test.rs  recurse_thumbnail_gen_test.rs  thumbnail.rs  thumbnail_album_gen_test.rs  tokio_test.rs
