[package]
name="eh-system-backend2"
version="0.0.0"
edition="2018"

[lib]
name="eh_system"
path="lib/lib.rs"

[dependencies]
tokio={version="1.5.0",features=["process","macros","rt","rt-multi-thread","time"]}
itertools="0.10.0"
yansi="0.5.0"

[[bin]]
name="recurse_thumbnail_gen_test"
path="tests/recurse_thumbnail_gen_test.rs"

# [[bin]]
# name="tokio_test"
# path="tests/tokio_test.rs"

# [[bin]]
# name="image_data_test"
# path="tests/image_data_test.rs"

# [[bin]]
# name="thumbnail_album_gen_test"
# path="tests/thumbnail_album_gen_test.rs"

# [[bin]]
# name="thumbnail"
# path="tests/thumbnail.rs"